Adicionado unit tests

--- a/Lancamento.API.Infra.Data/appsettings.json
+++ b/Lancamento.API.Infra.Data/appsettings.json
@@ -1,5 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=DESKTOP-AIP5M5I;database=dbLancamentos;Trusted_Connection=True;"
+    //"DefaultConnection": "server=DESKTOP-AIP5M5I;database=dbLancamentos;Trusted_Connection=True;"
+    "DefaultConnection": "server=sqldata, 1433;database=dbLancamentos;User Id=sa;Password=Senha@2023;"
+
   }
 }
