--- a/Lancamento.API/appsettings.Development.json
+++ b/Lancamento.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=DESKTOP-AIP5M5I;database=dbLancamentos;Trusted_Connection=True;"
+    //"DefaultConnection": "server=DESKTOP-AIP5M5I;database=dbLancamentos;Trusted_Connection=True;"
+    "DefaultConnection": "server=localhost,1450;database=dbLancamentos;User Id=sa;Password=Senha@2023;"
   },
   "Logging": {
     "LogLevel": {
@@ -12,7 +13,7 @@
   "RabbitMQ": {
     "HostName": "localhost",
     "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest"
+    "UserName": "admin",
+    "Password": "123456"
   }
 }
