--- a/Lancamento.API/appsettings.Development.json
+++ b/Lancamento.API/appsettings.Development.json
@@ -14,6 +14,7 @@
     "HostName": "localhost",
     "Port": 5672,
     "UserName": "admin",
-    "Password": "123456"
+    "Password": "123456",
+    "QueueName": "ConsolidadoQueue"
   }
 }
